--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "jeroennoten/laravel-adminlte": "^3.7",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "2.4"
+        "laravel/ui": "2.4",
+        "laraveldaily/laravel-invoices": "2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
