--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laraveldaily/laravel-invoices": "2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
